--- a/covid_web/templates/index.html
+++ b/covid_web/templates/index.html
@@ -20,12 +20,19 @@
       transform: translate(-50%, -50%);
     }
     
+    .carousel-inner>.item>img, .carousel-inner>.item>a>img {
+      display: block;
+      height: auto;
+      max-width: 100%;
+      line-height: 1;
+      width: 100%; // Add this
+    }
   </style>
 
 </head>
 
 <body>
-  <div class="container-fluid" style="background: #FAD4AF;">
+  <div class="container-fluid p-0">
 
       <div id="slider" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -34,9 +41,9 @@
           <li data-target="#slider" data-slide-to="2"></li>
         </ol>
 
-        <div class="carousel-inner">
+        <div class="carousel-inner p-0">
           <!-- First slide -->
-          <div class="carousel-item active text-center p-4">
+          <div class="carousel-item active text-center">
             {% load static %}
             <img class="d-block w-100" src="{% static 'images/slide1.png' %}" alt="First slide">
             <div class="centered">
@@ -52,7 +59,7 @@
             </div>
           </div>
           <!-- Second slide -->
-          <div class="carousel-item text-center p-4">
+          <div class="carousel-item text-center">
             {% load static %}
             <img class="d-block w-100" src="{% static 'images/slide2.png' %}" alt="Second slide">
             <div class="container-fluid centered" style="color:black;">
@@ -76,7 +83,7 @@
             </div>
           </div>
           <!-- Third slide -->
-          <div class="carousel-item text-center p-4">
+          <div class="carousel-item text-center">
             {% load static %}
             <img class="d-block w-100" src="{% static 'images/slide3.png' %}" alt="Third slide">
           </div>
@@ -105,87 +112,93 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Doc</a>
+                <a class="nav-link" target="blank" href="">Doc</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" target="blank" href="#">About</a>
             </li>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="signup/" >Register</a>
+                <a class="nav-link" href="signup/" ><b>Register</b></a>
             </li>
         </ul>
     </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container-fluid p-4">
 
   <div class="row">
 
-    <div class="col-sm" style="padding:2%;">
-      <div class="overflow-auto">
-        </h2> </h2>
-        <p>Most common symptoms:
-          fever
-          dry cough
-          tiredness
-          Less common symptoms:
-          aches and pains
-          sore throat
-          diarrhoea
-          conjunctivitis
-          headache
-          loss of taste or smell
-          a rash on skin, or discolouration of fingers or toes
-          Serious symptoms:
-          difficulty breathing or shortness of breath
-          chest pain or pressure
-          loss of speech or movement
-        </p>
-      </div>
+    <div class="col-sm p-3">
+        <h2>It behaves like a 'hit and run' killer</h2>
+        <p>The amount of virus in our body begins to peak the day before we begin to get sick.
+But it takes at least a week before Covid progresses to the point where people need hospital treatment.
+"This is a really brilliant evolutionary tactic - you don't go to bed, you go out and have a good time," says Prof Lehner.
+So the virus is like a dangerous driver fleeing the scene - the virus has moved on to the next victim long before we either recover or die.
+In stark terms, "the virus doesn't care" if you die, says Prof Lehner, "this is a hit and run virus".
+This is a massive contrast with the original Sars-coronavirus, back in 2002. It was most infectious days after people became ill, so they were easy to isolate.</p>
+        <p class="text-muted">Reference : <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjopOeB4oHtAhUBlEsFHfLBDScQFjABegQIBhAC&url=https%3A%2F%2Fwww.bbc.com%2Fnews%2Fhealth-54648684&usg=AOvVaw2Jfl2XGNIoPHCbgWdwYE4G" style="text-decoration: none;">BBC</a> </p>
     </div>
 
-    <div class="col-sm p-3">
-      <div class="container-md bg-light">
-      <h2><b>Welcome to Covid-19 Tracker</b></h2>
-        <form class="form-signin" action="" method="post">
-          {% csrf_token %}
-          <label for="form.id_username" class="sr-only pt-2">Username</label>
-          <input type="text" id="form.id_username" class="form-control" name="{{ form.username.html_name}}" placeholder="Username" required autofocus>
-          <label for="form.id_password" class="sr-only pt-2">Password</label>
-          <input type="password" id="form.id_password" class="form-control" placeholder="Password" required name="{{ form.password.html_name}}">
-          <div class="container p-3">
-            <button type="submit" class="btn btn-success">Login</button>
-            <a href="{% url 'password_reset' %}" class="float-right">Forgot password?</a>
-          </div>
-          {% if form.errors %}
-            {% for field in form %}
-              {% for error in field.errors %}
+    <div class="col">
+      <div class="container bg-light p-3">
+        <h2><b>Welcome to Covid-19 Tracker</b></h2>
+          <form class="form-signin" action="" method="post">
+            {% if form.errors %}
+              {% for field in form %}
+                {% for error in field.errors %}
+                  <div class="alert alert-danger">
+                    <strong>{{ error|escape }}</strong>
+                  </div>
+                {% endfor %}
+              {% endfor %}
+              {% for error in form.non_field_errors %}
                 <div class="alert alert-danger">
-                  <strong>{{ error|escape }}</strong>
+                    <strong>{{ error|escape }}</strong>
                 </div>
               {% endfor %}
-            {% endfor %}
-            {% for error in form.non_field_errors %}
-              <div class="alert alert-danger">
-                  <strong>{{ error|escape }}</strong>
+            {% endif %}
+
+            {% csrf_token %}
+            <label for="form.id_username" class="sr-only pt-2">Username</label>
+            <input type="text" id="form.id_username" class="form-control" name="{{ form.username.html_name}}" placeholder="Username" required autofocus>
+            <label for="form.id_password" class="sr-only pt-2">Password</label>
+            <input type="password" id="form.id_password" class="form-control" placeholder="Password" required name="{{ form.password.html_name}}">
+
+            <div class="row pt-3">
+              <div class="col">
+                <button type="submit" class="btn btn-outline-success" style="width:230px;height:38px;"><b>Login</b></button>
               </div>
-            {% endfor %}
-          {% endif %}
-        </form>
-      
-        <a href="{% url 'social:begin' 'google-oauth2' %}">
-          {% load static %}
-          <img src={% static 'images/google_login.png' %} style="width:230px;height:38px;">
-        </a>
-        <a><b>or</b></a>
-        <a class="pt-2" href="{% url 'social:begin' 'github' %}">
-          {% load static %}
-          <img src={% static 'images/github_logo.png' %} style="width:230px;height:38px;">
-        </a>
+              <div class="col">
+                <a href="{% url 'password_reset' %}" class="float-right pt-3" style="text-decoration: none;">Forgot password?</a>
+              </div>
+            </div>
+
+          </form>
+          
+          <div class="row pt-3">
+            <div class="col pt-2">
+              <a href="{% url 'social:begin' 'google-oauth2' %}">
+                {% load static %}
+                <img src={% static 'images/google_login.png' %} style="width:230px;height:38px;">
+              </a>
+            </div>
+            <div class="col pt-2">
+              <a href="{% url 'social:begin' 'github' %}">
+                {% load static %}
+                <img src={% static 'images/github_logo.png' %} style="width:230px;height:38px;">
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+  <footer class="page-footer font-small bg-light">
+    <div class="text-muted text-center py-3">
+      This is Covid-19 Tracker application use for ISP project proposal only.
+    </div>
+  </footer>
 </html>
