--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,60 +1,204 @@
-{% extends "base_template.html" %} 
-{% block title %}<title>Home Page</title>{%endblock %} 
-{% block navbar %}
-    <div class="navbar">
-      <a href="signup/" class="right">Don't have any account?</a>
-    </div>
-{% endblock %}
+<!DOCTYPE html>
+<html>
 
-{% block content %}
-<div class="left">
-  <p>Date: <span id="date"></span></p>
-  <script>
-    dt = new Date();
-    y = dt.getFullYear();
-    m = dt.getMonth() + 1;
-    d = dt.getDate();
-    document.getElementById("date").innerHTML = y + "-" + m + "-" + d;
-  </script>
-  <div class="centered">
-    <div class="textbox">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% block title %}<title>Covid19-Tracker</title>{% endblock %}
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'covid_web/bootstrap/css/bootstrap.css' %}" />
+  {% load static %}
+  <script src ={% static 'covid_web/bootstrap/js/bootstrap.js' %}></script>
+
+  <style>
+    {% comment %} make text centered in carousel {% endcomment %}
+    .centered {
+      color:white;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+    
+    .carousel-inner>.item>img, .carousel-inner>.item>a>img {
+      display: block;
+      height: auto;
+      max-width: 100%;
+      line-height: 1;
+      width: 100%; // Add this
+    }
+  </style>
+
+</head>
+
+<body>
+  <div class="container-fluid p-0">
+
+      <div id="slider" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#slider" data-slide-to="0" class="active"></li>
+          <li data-target="#slider" data-slide-to="1"></li>
+          <li data-target="#slider" data-slide-to="2"></li>
+        </ol>
+
+        <div class="carousel-inner p-0">
+          <!-- First slide -->
+          <div class="carousel-item active text-center">
+            {% load static %}
+            <img class="d-block w-100" src="{% static 'images/slide1.png' %}" alt="First slide">
+            <div class="centered">
+              <h1 style="font-size:6vw;"><b>Covid19-Tracker</b></h1>
+              <p style="font-size:2vw;">Date: <span id="date"></span></p>
+              <script>
+                dt = new Date();
+                y = dt.getFullYear();
+                m = dt.getMonth() + 1;
+                d = dt.getDate();
+                document.getElementById("date").innerHTML = y + "-" + m + "-" + d;
+              </script>
+            </div>
+          </div>
+          <!-- Second slide -->
+          <div class="carousel-item text-center">
+            {% load static %}
+            <img class="d-block w-100" src="{% static 'images/slide2.png' %}" alt="Second slide">
+            <div class="container-fluid centered" style="color:black;">
+              <h1 style="font-size:4vw;" ><b>Today Data</b></h1>
+              <div class="row">
+                <div class="col">
+                  <h4 style="font-size:3vw;">Total Cases <div class="text-danger"><b>{{totalconfirm}}</b></div></h4>
+                </div>
+                <div class="col">
+                  <h4 style="font-size:3vw;">New Cases <div class="text-warning"><b>{{newconfirm}}</b></div></h4>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <h4 style="font-size:3vw;">Total Deaths <div class="text-muted"><b>{{totaldeaths}}</b></div></h4>
+                </div>
+                <div class="col">
+                  <h4 style="font-size:3vw;">New Deaths <div class="text-dark"><b>{{newdeaths}}</b></div></h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Third slide -->
+          <div class="carousel-item text-center">
+            {% load static %}
+            <img class="d-block w-100" src="{% static 'images/slide3.png' %}" alt="Third slide">
+          </div>
+        </div>
+
+        <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only"></span>
+        </a>
+        <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only"></span>
+        </a>
+      </div>
+  </div>
+</body>
+
+<nav class="navbar navbar-expand-md navbar-light bg-light" style="padding:1%">
+    <a class="navbar-brand" href="#">
       {% load static %}
-      <img src="{% static 'images/infection1.png' %}" /> Total Confirm Cases :
-      {{totalconfirm}}
+      <img src="{% static 'images/infection2.png' %}" width="30" height="30" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" target="blank" href="">Doc</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" target="blank" href="#">About</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="signup/" ><b>Register</b></a>
+            </li>
+        </ul>
     </div>
-    <div class="textbox">
-      {% load static %}
-      <img src="{% static 'images/infection2.png' %}" /> New Confirm Cases :
-      {{newconfirm}}
+</nav>
+
+<div class="container-fluid p-4">
+
+  <div class="row">
+
+    <div class="col-sm p-3">
+        <h2>It behaves like a 'hit and run' killer</h2>
+        <p>The amount of virus in our body begins to peak the day before we begin to get sick.
+But it takes at least a week before Covid progresses to the point where people need hospital treatment.
+"This is a really brilliant evolutionary tactic - you don't go to bed, you go out and have a good time," says Prof Lehner.
+So the virus is like a dangerous driver fleeing the scene - the virus has moved on to the next victim long before we either recover or die.
+In stark terms, "the virus doesn't care" if you die, says Prof Lehner, "this is a hit and run virus".
+This is a massive contrast with the original Sars-coronavirus, back in 2002. It was most infectious days after people became ill, so they were easy to isolate.</p>
+        <p class="text-muted">Reference : <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjopOeB4oHtAhUBlEsFHfLBDScQFjABegQIBhAC&url=https%3A%2F%2Fwww.bbc.com%2Fnews%2Fhealth-54648684&usg=AOvVaw2Jfl2XGNIoPHCbgWdwYE4G" style="text-decoration: none;">BBC</a> </p>
     </div>
-    <div class="textbox">
-      {% load static %}
-      <img src="{% static 'images/infection3.png' %}" /> New Deaths :
-      {{newdeaths}}
-    </div>
-    <div class="textbox">
-      {% load static %}
-      <img src="{% static 'images/infection4.png' %}" /> Total Deaths :
-      {{totaldeaths}}
+
+    <div class="col">
+      <div class="container bg-light p-3">
+        <h2><b>Welcome to Covid-19 Tracker</b></h2>
+          <form class="form-signin" action="" method="post">
+            {% if form.errors %}
+              {% for field in form %}
+                {% for error in field.errors %}
+                  <div class="alert alert-danger">
+                    <strong>{{ error|escape }}</strong>
+                  </div>
+                {% endfor %}
+              {% endfor %}
+              {% for error in form.non_field_errors %}
+                <div class="alert alert-danger">
+                    <strong>{{ error|escape }}</strong>
+                </div>
+              {% endfor %}
+            {% endif %}
+
+            {% csrf_token %}
+            <label for="form.id_username" class="sr-only pt-2">Username</label>
+            <input type="text" id="form.id_username" class="form-control" name="{{ form.username.html_name}}" placeholder="Username" required autofocus>
+            <label for="form.id_password" class="sr-only pt-2">Password</label>
+            <input type="password" id="form.id_password" class="form-control" placeholder="Password" required name="{{ form.password.html_name}}">
+
+            <div class="row pt-3">
+              <div class="col">
+                <button type="submit" class="btn btn-outline-success" style="width:230px;height:38px;"><b>Login</b></button>
+              </div>
+              <div class="col">
+                <a href="{% url 'password_reset' %}" class="float-right pt-3" style="text-decoration: none;">Forgot password?</a>
+              </div>
+            </div>
+
+          </form>
+          
+          <div class="row pt-3">
+            <div class="col pt-2">
+              <a href="{% url 'social:begin' 'google-oauth2' %}">
+                {% load static %}
+                <img src={% static 'images/google_login.png' %} style="width:230px;height:38px;">
+              </a>
+            </div>
+            <div class="col pt-2">
+              <a href="{% url 'social:begin' 'github' %}">
+                {% load static %}
+                <img src={% static 'images/github_logo.png' %} style="width:230px;height:38px;">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-<div class="right">
-  <div class="centered">
-    <h2>Welcome to Covid19-Tracker</h2>
 
-    <form method="post">
-      {% csrf_token %} {{ form.as_p }}
-      <p>
-        <button type="submit">Login</button>
-      </p>
-      <input type="hidden" name="next" value="{{next}}" />
-    </form>
-      <a href="{% url 'social:begin' 'google-oauth2' %}">
-      {% load static %}
-      <img src={% static 'images/google_login.png' %} style="width:230px;height:38px;"></a><br><br>
-      <a href="{% url 'social:begin' 'github' %}">githubbbb<br>
-    <a href="{% url 'password_reset' %}">Forgot password?</a>
-  </div>
-</div>
-{% endblock %}
+  <footer class="page-footer font-small bg-light">
+    <div class="text-muted text-center py-3">
+      This is Covid-19 Tracker application use for ISP project proposal only.
+    </div>
+  </footer>
+</html>
