--- a/covid_web/templates/base_template.html
+++ b/covid_web/templates/base_template.html
@@ -2,32 +2,70 @@
 <html>
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   {% block title %}<title>Covid19-Tracker</title>{% endblock %}
   {% load static %}
-  <link rel="stylesheet" href="{% static 'covid_web/styles.css' %}" />
+  <link rel="stylesheet" href="{% static 'covid_web/bootstrap/css/bootstrap.css' %}" />
+  {% load static %}
+  <script src ={% static 'covid_web/bootstrap/js/bootstrap.js' %}></script>
+  <style>
+    {% comment %} make text centered in carousel {% endcomment %}
+    .centered {
+      color:white;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+    
+    .carousel-inner>.item>img, .carousel-inner>.item>a>img {
+      display: block;
+      height: auto;
+      max-width: 100%;
+      line-height: 1;
+      width: 100%; // Add this
+    }
+  </style>
 </head>
 
 <body>
-  <div class="header">
-    <h1>Covid19-Tracker</h1>
-  </div>
+    {% block sidebar %}
+    {% endblock %}
 
-  {% block navbar %}
-  <div class="navbar">
-    <a href="#">LineBot</a>
-    <a href="#">Contact Us</a>
-    <a href="#" class="logout">Logout</a>
-  </div>
-  {% endblock %}
-
-
-  <div class="container">
-    {% block content %}{% endblock %}
-  </div>
-  <div class="footer">
-    <p>This is Covid19-Tracker app used for ISP project proposal only.</p>
-  </div>
+    {% block navbar %}
+  <nav class="navbar navbar-expand-md navbar-light bg-light" style="padding:1%">
+      <a class="navbar-brand" href="#">
+        {% load static %}
+        <img src="{% static 'images/infection2.png' %}" width="30" height="30" alt="">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                  <a class="nav-link" target="blank" href="#">Doc</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" target="blank" href="#">About</a>
+              </li>
+          </ul>
+          <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link" href="signup/" ><b>Don't have account?</b></a>
+              </li>
+          </ul>
+      </div>
+  </nav>
+    {% endblock %}
+    
+    {% block content %}
+    {% endblock %}
+  <footer class="page-footer font-small bg-light" style=" bottom: 0; width: 100%;">
+    <div class="text-muted text-center py-3">
+      This is Covid-19 Tracker application use for ISP project proposal only.
+    </div>
+  </footer>
 </body>
-
 </html>
