--- a/covid_web/templates/index.html
+++ b/covid_web/templates/index.html
@@ -1,144 +1,88 @@
-<!DOCTYPE html>
-<html>
+{% extends "base_template.html" %} 
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  {% block title %}<title>Covid19-Tracker</title>{% endblock %}
-  {% load static %}
-  <link rel="stylesheet" href="{% static 'covid_web/bootstrap/css/bootstrap.css' %}" />
-  {% load static %}
-  <script src ={% static 'covid_web/bootstrap/js/bootstrap.js' %}></script>
+{% block title %}<title>Covid19-Tracker</title>{% endblock %}
 
-  <style>
-    {% comment %} make text centered in carousel {% endcomment %}
-    .centered {
-      color:white;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-    
-    .carousel-inner>.item>img, .carousel-inner>.item>a>img {
-      display: block;
-      height: auto;
-      max-width: 100%;
-      line-height: 1;
-      width: 100%; // Add this
-    }
-  </style>
+{% block sidebar %}
+<div class="container-fluid p-0">
 
-</head>
+    <div id="slider" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#slider" data-slide-to="0" class="active"></li>
+        <li data-target="#slider" data-slide-to="1"></li>
+        <li data-target="#slider" data-slide-to="2"></li>
+      </ol>
 
-<body>
-  <div class="container-fluid p-0">
-
-      <div id="slider" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#slider" data-slide-to="0" class="active"></li>
-          <li data-target="#slider" data-slide-to="1"></li>
-          <li data-target="#slider" data-slide-to="2"></li>
-        </ol>
-
-        <div class="carousel-inner p-0">
-          <!-- First slide -->
-          <div class="carousel-item active text-center">
-            {% load static %}
-            <img class="d-block w-100" src="{% static 'images/slide1.png' %}" alt="First slide">
-            <div class="centered">
-              <h1 style="font-size:6vw;"><b>Covid19-Tracker</b></h1>
-              <p style="font-size:2vw;">Date: <span id="date"></span></p>
-              <script>
-                dt = new Date();
-                y = dt.getFullYear();
-                m = dt.getMonth() + 1;
-                d = dt.getDate();
-                document.getElementById("date").innerHTML = y + "-" + m + "-" + d;
-              </script>
-            </div>
-          </div>
-          <!-- Second slide -->
-          <div class="carousel-item text-center">
-            {% load static %}
-            <img class="d-block w-100" src="{% static 'images/slide2.png' %}" alt="Second slide">
-            <div class="container-fluid centered" style="color:black;">
-              <h1 style="font-size:4vw;" ><b>Today Data</b></h1>
-              <div class="row">
-                <div class="col">
-                  <h4 style="font-size:3vw;">Total Cases <div class="text-danger"><b>{{totalconfirm}}</b></div></h4>
-                </div>
-                <div class="col">
-                  <h4 style="font-size:3vw;">New Cases <div class="text-warning"><b>{{newconfirm}}</b></div></h4>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <h4 style="font-size:3vw;">Total Deaths <div class="text-muted"><b>{{totaldeaths}}</b></div></h4>
-                </div>
-                <div class="col">
-                  <h4 style="font-size:3vw;">New Deaths <div class="text-dark"><b>{{newdeaths}}</b></div></h4>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Third slide -->
-          <div class="carousel-item text-center">
-            {% load static %}
-            <img class="d-block w-100" src="{% static 'images/slide3.png' %}" alt="Third slide">
+      <div class="carousel-inner p-0">
+        <!-- First slide -->
+        <div class="carousel-item active text-center">
+          {% load static %}
+          <img class="d-block w-100" src="{% static 'images/slide1.png' %}" alt="First slide">
+          <div class="centered">
+            <h1 style="font-size:6vw;"><b>Covid19-Tracker</b></h1>
+            <p style="font-size:2vw;">Date: <span id="date"></span></p>
+            <script>
+              dt = new Date();
+              y = dt.getFullYear();
+              m = dt.getMonth() + 1;
+              d = dt.getDate();
+              document.getElementById("date").innerHTML = y + "-" + m + "-" + d;
+            </script>
           </div>
         </div>
-
-        <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only"></span>
-        </a>
-        <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only"></span>
-        </a>
+        <!-- Second slide -->
+        <div class="carousel-item text-center">
+          {% load static %}
+          <img class="d-block w-100" src="{% static 'images/slide2.png' %}" alt="Second slide">
+          <div class="container-fluid centered" style="color:black;">
+            <h1 style="font-size:4vw;" ><b>Today Data</b></h1>
+            <div class="row">
+              <div class="col">
+                <h4 style="font-size:3vw;">Total Cases <div class="text-danger"><b>{{totalconfirm}}</b></div></h4>
+              </div>
+              <div class="col">
+                <h4 style="font-size:3vw;">New Cases <div class="text-warning"><b>{{newconfirm}}</b></div></h4>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <h4 style="font-size:3vw;">Total Deaths <div class="text-muted"><b>{{totaldeaths}}</b></div></h4>
+              </div>
+              <div class="col">
+                <h4 style="font-size:3vw;">New Deaths <div class="text-dark"><b>{{newdeaths}}</b></div></h4>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Third slide -->
+        <div class="carousel-item text-center">
+          {% load static %}
+          <img class="d-block w-100" src="{% static 'images/slide3.png' %}" alt="Third slide">
+        </div>
       </div>
-  </div>
-</body>
 
-<nav class="navbar navbar-expand-md navbar-light bg-light" style="padding:1%">
-    <a class="navbar-brand" href="#">
-      {% load static %}
-      <img src="{% static 'images/infection2.png' %}" width="30" height="30" alt="">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" target="blank" href="">Doc</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" target="blank" href="#">About</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="signup/" ><b>Register</b></a>
-            </li>
-        </ul>
+      <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only"></span>
+      </a>
+      <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only"></span>
+      </a>
     </div>
-</nav>
-
+</div>
+{% endblock %}
+{% block content %}
 <div class="container-fluid p-4">
-
   <div class="row">
-
     <div class="col-sm p-3">
-        <h2>It behaves like a 'hit and run' killer</h2>
-        <p>The amount of virus in our body begins to peak the day before we begin to get sick.
+      <h2>It behaves like a 'hit and run' killer</h2>
+      <p>The amount of virus in our body begins to peak the day before we begin to get sick.
 But it takes at least a week before Covid progresses to the point where people need hospital treatment.
 "This is a really brilliant evolutionary tactic - you don't go to bed, you go out and have a good time," says Prof Lehner.
 So the virus is like a dangerous driver fleeing the scene - the virus has moved on to the next victim long before we either recover or die.
 In stark terms, "the virus doesn't care" if you die, says Prof Lehner, "this is a hit and run virus".
 This is a massive contrast with the original Sars-coronavirus, back in 2002. It was most infectious days after people became ill, so they were easy to isolate.</p>
-        <p class="text-muted">Reference : <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjopOeB4oHtAhUBlEsFHfLBDScQFjABegQIBhAC&url=https%3A%2F%2Fwww.bbc.com%2Fnews%2Fhealth-54648684&usg=AOvVaw2Jfl2XGNIoPHCbgWdwYE4G" style="text-decoration: none;">BBC</a> </p>
+      <p class="text-muted">Reference : <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjopOeB4oHtAhUBlEsFHfLBDScQFjABegQIBhAC&url=https%3A%2F%2Fwww.bbc.com%2Fnews%2Fhealth-54648684&usg=AOvVaw2Jfl2XGNIoPHCbgWdwYE4G" style="text-decoration: none;">BBC</a> </p>
     </div>
 
     <div class="col">
@@ -195,10 +139,5 @@ This is a massive contrast with the original Sars-coronavirus, back in 2002. It 
       </div>
     </div>
   </div>
-
-   <footer class="page-footer font-small bg-light" style=" bottom: 0; width: 100%;">
-    <div class="text-muted text-center py-3">
-      This is Covid-19 Tracker application use for ISP project proposal only.
-    </div>
-  </footer>
-</html>
+</div>
+{% endblock %}
